# morse-translator

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: main.cpp.5E24EABF78D73B1C.idx  translator.h.19E449C19913D554.idx
includes/: translator.h
translator/: Morse_Class.cpp  translate-Class.cpp  translator.h
